# Claudia

./: .env.ros2  .env.unitree_sdk  .gitignore  AB_TEST_EXECUTIVE_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETE.md  ClaudiaIntelligent_Qwen3B  ClaudiaIntelligent_Qwen7B  DEPLOYMENT_PHASE1_COMPLETE.md  HARDWARE_TEST_GUIDE.md  LICENSE  NEXT_STEPS_AFTER_AB_TEST.md  README.ja.md  README.md  README.zh.md  REVIEW_BUGS.md  SECURITY.md  claudia-go2-3b-v11.2.Modelfile  claudia-go2-3b-v11.3.Modelfile  package-lock.json  production_commander.py  pyproject.toml  start_production_brain.sh  test_ab_quick.py  test_safety_fixes.py  voice_commander.py
.cursor/: mcp.json
.cursor/rules/: mcp_collaboration.mdc  project_management.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_issue.yml
.serena/: project.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  tasks.json
config/: default.yaml
docs/: AB_TEST_FINAL_REPORT.md  README.md
docs/architecture/: CORRECT_LLM_ARCHITECTURE.md  FINAL_BRAIN_ARCHITECTURE_PROPOSAL.md  FINAL_FEASIBILITY_REPORT.md  HYBRID_ARCHITECTURE_FEASIBILITY_ANALYSIS.md  INTELLIGENT_LLM_ARCHITECTURE.md  LLM_FRAMEWORK_ANALYSIS.md  NEW_BRAIN_ARCHITECTURE_SUCCESS.md  task11_architecture_design.md
docs/deployment/: DEPLOYMENT_PHASE1_COMPLETE.md  FINAL_BREAKTHROUGH_SUMMARY.md  FINAL_SOLUTION_7B_LOCAL.md  PRODUCTION_DEPLOYMENT_SUCCESS.md  PRODUCTION_READY.md  (+3 more)
models/: ClaudiaAction_v1.0  ClaudiaAction_v2.0  ClaudiaAction_v2.1  ClaudiaAction_v3.0  ClaudiaIntelligent_7B_v2.0  ClaudiaIntelligent_7B_v2.0.modelfile
scripts/: audit_baseline.py  setup_asr_venv.sh  shadow_observation_commands.py  smoke_test_three_modes.py  start_claudia.sh
test/: README.md  __init__.py  conftest.py  run_tests.py
(+275 files in other folders)
